# allegro-ui

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  example_1.c  example_2.c  example_3.c
include/: allegro_ui.h  background_color.h  border.h  button.h  center_height.h  center_width.h  hbox.h  keyboard.h  label.h  padding.h  text_box.h  vbox.h  vector.h  widget.h
src/: CMakeLists.txt  allegro_ui.c  background_color.c  border.c  button.c  center_height.c  center_width.c  hbox.c  keyboard.c  label.c  padding.c  text_box.c  vbox.c  vector.c
