include_directories(../include)
if (DEFINED ALLEGRO_INCLUDE_DIR)
	include_directories(${ALLEGRO_INCLUDE_DIR})
endif()
add_executable(example_1 example_1.c)
add_executable(example_2 example_2.c)
add_executable(example_3 example_3.c)
if (DEFINED ALLEGRO_LIBRARY_DIR)
	link_directories(${ALLEGRO_LIBRARY_DIR})
	if (${ALLEGRO_STATIC})
		if (${ALLEGRO_MONOLITH})
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith-static.a -lm -lSM -lICE -lX11 -lXext -lXcursor -lXpm -lXi -lXinerama -lXrandr -lXss -lOpenGL -lGLU -lGLX -lpng -lz -lgtk-3 -lgdk-3 -lz -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lgthread-2.0 -lglib-2.0)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith-static.a -lm -lSM -lICE -lX11 -lXext -lXcursor -lXpm -lXi -lXinerama -lXrandr -lXss -lOpenGL -lGLU -lGLX -lpng -lz -lgtk-3 -lgdk-3 -lz -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lgthread-2.0 -lglib-2.0)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith-static.a -lm -lSM -lICE -lX11 -lXext -lXcursor -lXpm -lXi -lXinerama -lXrandr -lXss -lOpenGL -lGLU -lGLX -lpng -lz -lgtk-3 -lgdk-3 -lz -lpangocairo-1.0 -lpango-1.0 -lharfbuzz -latk-1.0 -lcairo-gobject -lcairo -lgdk_pixbuf-2.0 -lgio-2.0 -lgobject-2.0 -lglib-2.0 -lgthread-2.0 -lglib-2.0)
		else()
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf-static.a)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a${ALLEGRO_LIBRARY_DIR}/liballegro-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf-static.a)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a${ALLEGRO_LIBRARY_DIR}/liballegro-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font-static.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf-static.a)
		endif()
	else()
		if (${ALLEGRO_MONOLITH})
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith.a)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith.a)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro_monolith.a)
		else()
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf.a)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf.a)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a ${ALLEGRO_LIBRARY_DIR}/liballegro.a ${ALLEGRO_LIBRARY_DIR}/liballegro_primitives.a ${ALLEGRO_LIBRARY_DIR}/liballegro_font.a ${ALLEGRO_LIBRARY_DIR}/liballegro_ttf.a)
		endif()
	endif()
else()
	if (${ALLEGRO_STATIC})
		if (${ALLEGRO_MONOLITH})
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith-static)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith-static)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith-static)
		else()
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro-static -lallegro_primitives-static -lallegro_font-static -lallegro_ttf-static)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro-static -lallegro_primitives-static -lallegro_font-static -lallegro_ttf-static)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro-static -lallegro_primitives-static -lallegro_font-static -lallegro_ttf-static)
		endif()
	else()
		if (${ALLEGRO_MONOLITH})
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro_monolith)
		else()
			target_link_libraries(example_1 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro -lallegro_primitives -lallegro_font -lallegro_ttf)
			target_link_libraries(example_2 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro -lallegro_primitives -lallegro_font -lallegro_ttf)
			target_link_libraries(example_3 ${CMAKE_CURRENT_BINARY_DIR}/../src/liballegro_ui.a -lallegro -lallegro_primitives -lallegro_font -lallegro_ttf)
		endif()
	endif()
endif()
